--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -120,7 +120,7 @@ userPage.password.placeholder = The password must contain a minimum of 8 charact
 userPage.Password.errorMessage = The password must contain a minimum of 8 characters with a UpperCase Letter, a special character and a number
 userPage.role = Role 
 userPage.role.select = Select a Role
-userPage.addUser.create = Create a user
+userPage.addUser.create = Create the user
 userPage.addUser.update = Update the user
 userPage.ListOfUsers = List of users
 
@@ -131,9 +131,9 @@ rolePage.roleLabel = Role name
 rolePage.roleLabel.placeholder = The role name is mandatory and must be at least 2 characters long
 rolePage.roleLabel.errorMessage = The role name is mandatory and must be at least 2 characters long
 messageErrorRoleName = The role name entered already exists in the database
-application.create.role = Create a role
+application.create.role = Create the role
 rolePage.updateRoleTitle = Update a role
-application.update.role = Update a role
+application.update.role = Update the role
 rolePage.role.modify = Update a role
 rolePage.ListOfRoles = List of roles
 
@@ -183,8 +183,8 @@ messageErrorVisitNdFalse = This field must be completed if the visit is done
 messageErrorVisitDateMissing = The date must be entered if the visit is performed
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The date of visit cannot be in the future
-application.create.dov = Create a form Date of visit
-application.update.dov =
+application.create.dov = Create the form Date of visit
+application.update.dov = Update the form Date of visit
 
 /*---IC---*/
 icPage.addIcTitle = Create a form Informed consent
@@ -273,7 +273,7 @@ tePage.target.lesion = Target Lesions
 tePage.non.target.lesion = Non Target Lesions
 tePage.new.lesion.status = New Lesion
 tePage.overall.response = Overall Response
-application.create.te = Create a form Tumoral evaluation
+application.create.te = Create thr form Tumoral evaluation
 messageErrorCR = This Overall Response does not match with previous evaluation results
 messageErrorPR = This Overall Response does not match with previous evaluation results
 messageErrorSD = This Overall Response does not match with previous evaluation results
@@ -375,7 +375,7 @@ event.inactive = Inactivate Event
 event.active = Reactivate Event
 
 /*---Query---*/
-queryPage.addQueryTitle =
-queryPage.text =
-messageErrorInputQueryTextNd =
-application.create.query =
+queryPage.addQueryTitle = Create a Query
+queryPage.text = Query text
+messageErrorInputQueryTextNd = Query text is mandatory
+application.create.query = Create the Query
