--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -131,10 +131,10 @@ rolePage.roleLabel = Nom du rôle
 rolePage.roleLabel.placeholder = Le nom du rôle est obligatoire et doit contenir au moins 2 caractères
 rolePage.roleLabel.errorMessage = Le nom du rôle est obligatoire et doit contenir au moins 2 caractères
 messageErrorRoleName = Le nom du rôle entré existe déjà dans la base de données
-application.create.role = Créer un rôle
+application.create.role = Créer le rôle
 rolePage.updateRoleTitle = Mettre à jour un rôle
-application.update.role = Mettre à jour un rôle
-rolePage.role.modify = Mettre à jour le rôle
+application.update.role = Mettre à jour le rôle
+rolePage.role.modify = Mettre à jour un rôle
 rolePage.ListOfRoles = Liste des rôles
 
 /*---Role Permission---*/
@@ -183,8 +183,8 @@ messageErrorVisitNdFalse = Ce champ doit être rempli si la visite n'a pas été ré
 messageErrorVisitDateMissing = La date de visite est obligatoire si celle-ci a été réalisée
 dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
-application.create.dov = Créer un formulaire Date de visite
-application.update.dov =
+application.create.dov = Créer le formulaire Date de visite
+application.update.dov = Mettre à jour le formulaire Date de visite
 
 /*---IC---*/
 icPage.addIcTitle = Créer un formulaire de Consentement éclairé
@@ -273,7 +273,7 @@ tePage.target.lesion = Lésions Cibles
 tePage.non.target.lesion = Lésions Non Cibles
 tePage.new.lesion.status = Nouvelle Lésion
 tePage.overall.response = Réponse Globale
-application.create.te = Créer un formulaire d'Evaluation tumorale
+application.create.te = Créer le formulaire d'Evaluation tumorale
 messageErrorCR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
 messageErrorPR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
 messageErrorSD = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
@@ -375,7 +375,7 @@ event.inactive = Évènement inactivé
 event.active = Réactiver l'évènement
 
 /*---Query---*/
-queryPage.addQueryTitle =
-queryPage.text =
-messageErrorInputQueryTextNd =
-application.create.query =
+queryPage.addQueryTitle = Créer une Requête
+queryPage.text = Texte de la Requête
+messageErrorInputQueryTextNd = L'énoncé de la Requête est obligatoire
+application.create.query = Créer la Requête
