--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -283,15 +283,15 @@ messageErrorNE = La Réponse Globale ne coïncide pas avec les résultats de l'éval
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
-aePage.aeterm = Description de l'EI
+aePage.aeterm = Description de l'EI 
 aePage.aeterm.placeHolder = Veuillez spécifier la description de l'EI
-aePage.aetermc = Terme préféré EI
+aePage.aetermc = Terme préféré EI 
 aePage.aetermc.placeHolder = Veuillez spécifier le Terme préféré EI
-aePage.aestdat = Date de début
-aePage.aeout = Issue de l'évènement
-aePage.aeendat = Date de fin
-aePage.aetoxgd = Toxicité
-aePage.aesev = Sévérité
+aePage.aestdat = Date de début 
+aePage.aeout = Issue de l'évènement 
+aePage.aeendat = Date de fin 
+aePage.aetoxgd = Toxicité 
+aePage.aesev = Sévérité 
 aePage.aerel = Relation avec le traitement de l'étude
 aePage.aeacn = Action prise avec le traitement de l'étude
 aePage.aecm = Est-ce qu'un traitement additionnel a été donné suite à cette évènement indésirable
@@ -325,7 +325,7 @@ messageErrorAaeser = L'évènement étant rapporté comme sérieux, au moins un critè
 cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
 cmPage.cmterm = Nom du traitement
 cmPage.cmterm.placeHolder = Veuillez spécifier le Nom du traitement
-cmPage.cmterm.errorMessage = le Nom du traitement est obligatoire
+messageErrorCmtermFalse = le Nom du traitement est obligatoire
 cmPage.cmtermc = Terme préféré - CM
 cmPage.cmtermc.placeHolder = Veuillez spécifier le Terme préféré - CM
 cmPage.cmstdat = Date de début
