--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -354,6 +354,8 @@ messageErrorCmFuture = Start date can not be in the future
 messageErrorCmendat = End date can not be in the future
 messageErrorCmendatBeforcmstdat = End Date reported is before Start Date, please correct
 messageErrorCmdoseAndCmdosuUnknown = Dose reported is 0 but Dose unit is not Unknown, please correct
+messageErrorCmstdatMis =
+messageErrorCmendatMis =
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = List of Events
