--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -354,6 +354,8 @@ messageErrorCmFuture = La Date de début ne peut pas être dans le futur
 messageErrorCmendat = La Date de fin ne peut pas être dans le futur
 messageErrorCmendatBeforcmstdat = La Date de fin est antérieure à la Date de début, veuillez corriger
 messageErrorCmdoseAndCmdosuUnknown = La Dose entrée est 0 mais  l'Unité est différente de Unknown, veuillez corriger
+messageErrorCmstdatMis =
+messageErrorCmendatMis =
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = Liste des évènements
