--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -27,10 +27,10 @@ footer.copyright = Sym022©2023 Website created by DEBETANCOURT Daphne and DEVOGE
 menu.data.DM = Data Manager menu
 menu.data.site = Sites menu
 menu.data.site.add = Add a Site
-menu.data.site.consult = Liste of sites
+menu.data.site.consult = List of sites
 menu.data.users = Users
 menu.data.users.add = Add a user
-menu.data.users.consult = List of utilisateurs
+menu.data.users.consult = List of users
 menu.data.usersSite.add = Allocate a list of sites for a user
 menu.data.usersSite.consult = List of users and related sites
 menu.data.role = Roles and permissions
@@ -45,6 +45,9 @@ menu.data.subject.consult = List of subjects
 menu.data.event = Events menu
 menu.data.event.add = Add an event
 menu.data.event.consult = List of events
+menu.CRA = CRA
+menu.data.CRA = Monitoring
+menu.data.CRA.to.validate = List dof events to monitor
 
 /*---Filter---*/
 listPage.messageErrorResearch = Research needs to be less than 60 characters and without special character
@@ -146,6 +149,7 @@ update.rolePermission = Update the list of permissions allocated for a role
 /*---User Site---*/
 add.userSite = Allocate a list of sites for a user
 select.user = Select a user 
+select.subject = Select a subject 
 select.userName = Select a username 
 select.lastName = Select a lastname 
 select.firstName = Select a firstname 
@@ -288,8 +292,10 @@ aePage.aeterm.placeHolder = Please specify the AE description
 aePage.aetermc = AE preferred term
 aePage.aetermc.placeHolder = Please specify the AE preferred term
 aePage.aestdat = Start date
+aePage.ttaestdat = If day and month are missing, select 01JAN
 aePage.aeout = Outcome
 aePage.aeendat = End date
+aePage.ttaeendat = If day and month are missing, select 31DEC or last day of the month.
 aePage.aetoxgd = Toxicity grade
 aePage.aesev = Severity
 aePage.aerel = Relationship to study treatment
@@ -318,7 +324,7 @@ messageErrorAemedimspMis = Please specify the reason why this is an Important me
 messageErrorAeterm = AE description is mandatory
 messageErrorAestdatFuture = Start date can not be in the future
 messageErrorAeendatFuture = End date can not be in the future
-messageErrorAeMisDate = Please specify the date
+messageErrorAestdatMis = Please specify the Start date
 messageErrorAaeser = As this event is reported as serious, at least one seriousness criterion should be Yes
 
 /*--CM--*/
@@ -329,8 +335,10 @@ messageErrorCmtermFalse = Medication name is mandatory
 cmPage.cmtermc = CM preferred term
 cmPage.cmtermc.placeHolder = Please specify the CM preferred term
 cmPage.cmstdat = Start date
+cmPage.ttcmstdat = If day and month are missing, select 01JAN
 cmPage.cmong = Ongoing
 cmPage.cmendat = End date
+cmPage.ttcmendat = If day and month are missing, select 31DEC or last day of the month.
 cmPage.cmindic = Reason for CM
 cmPage.cmindicsp = If Other reason, specify
 cmPage.cmindicsp.placeHolder = Please specify
@@ -353,9 +361,10 @@ cmPage.cmfreqsp.errorMessage = Please specify the Other frequency or correct the
 messageErrorCmFuture = Start date can not be in the future
 messageErrorCmendat = End date can not be in the future
 messageErrorCmendatBeforcmstdat = End Date reported is before Start Date, please correct
-messageErrorCmdoseAndCmdosuUnknown = Dose reported is 0 but Dose unit is not Unknown, please correct
-messageErrorCmstdatMis =
-messageErrorCmendatMis =
+messageErrorCmdoseAndCmdosuUnknown = Dose is not than 0 but Dose unit is Unknown, please correct
+messageErrorCmdoseAndCmdosuControl = Dose is 0 but Dose unit is not Unknown, please correct
+messageErrorCmstdatMis = Please specify the Start date
+messageErrorCmendatMis = Please specify the End date or correct the previous answer
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = List of Events
