--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -45,6 +45,9 @@ menu.data.subject.consult = Liste des sujets
 menu.data.event = Évènement
 menu.data.event.add = Créer un évènement
 menu.data.event.consult = Liste des évènements
+menu.CRA = ARC
+menu.data.CRA = Monitoring
+menu.data.CRA.to.validate = Liste des évènements à monitorer
 
 /*---Filter---*/
 listPage.messageErrorResearch = La recherche doit faire moins de 60 caractères et ne pas contenir de caractères spéciaux
@@ -146,6 +149,7 @@ update.rolePermission = Mettre à jour la liste des permissions attribuées un rôl
 /*---User Site---*/
 add.userSite = Assigner une liste de sites à un utilisateur
 select.user = Sélectionner un utilisateur 
+select.subject = Sélectionner un sujet 
 select.userName = Sélection un nom d'utilisateur 
 select.lastName = Sélectionner un nom 
 select.firstName = Sélectionner un prénom 
@@ -288,8 +292,10 @@ aePage.aeterm.placeHolder = Veuillez spécifier la description de l'EI
 aePage.aetermc = Terme préféré EI 
 aePage.aetermc.placeHolder = Veuillez spécifier le Terme préféré EI
 aePage.aestdat = Date de début 
+aePage.ttaestdat = Si le jour et le mois sont inconnus, choisir 01JAN
 aePage.aeout = Issue de l'évènement 
 aePage.aeendat = Date de fin 
+aePage.ttaeendat = Si le jour et le mois sont inconnus, choisir 31DEC ou le dernier jour du mois.
 aePage.aetoxgd = Toxicité 
 aePage.aesev = Sévérité 
 aePage.aerel = Relation avec le traitement de l'étude
@@ -318,7 +324,7 @@ messageErrorAemedimspMis = Veuillez spécifier la raison pour laquelle l'évènemen
 messageErrorAeterm = La description de l'EI est obligatoire
 messageErrorAestdatFuture = La Date de début ne peut pas être dans le futur
 messageErrorAeendatFuture = La Date de fin ne peut pas être dans le futur
-messageErrorAeMisDate = Veuillez spécifier la date
+messageErrorAestdatMis = Veuillez spécifier la date de début
 messageErrorAaeser = L'évènement étant rapporté comme sérieux, au moins un critère de sévérité doit être répondu Oui
 
 /*--CM--*/
@@ -329,8 +335,10 @@ messageErrorCmtermFalse = le Nom du traitement est obligatoire
 cmPage.cmtermc = Terme préféré - CM
 cmPage.cmtermc.placeHolder = Veuillez spécifier le Terme préféré - CM
 cmPage.cmstdat = Date de début
+cmPage.ttcmstdat = Si le jour et le mois sont inconnus, choisir 01JAN
 cmPage.cmong = En cours
 cmPage.cmendat = Date de fin
+cmPage.ttcmendat = Si le jour et le mois sont inconnus, choisir 31DEC ou le dernier jour du mois.
 cmPage.cmindic = Indication du traitement
 cmPage.cmindicsp = Si Indication autre, specifier
 cmPage.cmindicsp.placeHolder = Veuillez spécifier
@@ -353,9 +361,10 @@ cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger
 messageErrorCmFuture = La Date de début ne peut pas être dans le futur
 messageErrorCmendat = La Date de fin ne peut pas être dans le futur
 messageErrorCmendatBeforcmstdat = La Date de fin est antérieure à la Date de début, veuillez corriger
-messageErrorCmdoseAndCmdosuUnknown = La Dose entrée est 0 mais  l'Unité est différente de Unknown, veuillez corriger
-messageErrorCmstdatMis =
-messageErrorCmendatMis =
+messageErrorCmdoseAndCmdosuUnknown = La Dose entrée n'est pas 0 mais l'unité est rapportée est Unknown, veuillez corriger
+messageErrorCmdoseAndCmdosuControl = La Dose entrée est 0 mais l'Unité est différente de Unknown, veuillez corriger
+messageErrorCmstdatMis = Veuillez spécifier la date de début
+messageErrorCmendatMis = Veuillez spécifier la Date de fin ou corriger la réponse précédente
 
 /*---ListOfEvents---*/
 eventsPage.ListOfEvents = Liste des évènements
