--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -161,8 +161,8 @@ update.userSitePage = Update the list of sites for a user
 /*---Subject---*/
 subjectPage.addSubject = Create a subject 
 subjectPage.subjectNum = Subject Number
-subjectPage.subjectNum.placeholder = Must be between 1 and 999999999
-subjectPage.subjectNum.errorMessage = The Subject number must be between 1 and 999999999
+subjectPage.subjectNum.placeholder = Must be between 1 and 999999
+subjectPage.subjectNum.errorMessage = The Subject number must be between 1 and 999999
 messageErrorSubjectNum = The Subject number already exists in the database 
 sitePage.ListOfSubjects.modify = Update the subject
 sitePage.ListOfSubjects = List of subjects
@@ -278,12 +278,7 @@ tePage.non.target.lesion = Non Target Lesions
 tePage.new.lesion.status = New Lesion
 tePage.overall.response = Overall Response
 application.create.te = Create thr form Tumoral evaluation
-messageErrorCR = This Overall Response does not match with previous evaluation results
-messageErrorPR = This Overall Response does not match with previous evaluation results
-messageErrorSD = This Overall Response does not match with previous evaluation results
-messageErrorPD = This Overall Response does not match with previous evaluation results
-messageErrorNAE = This Overall Response does not match with previous evaluation results
-messageErrorNE = This Overall Response does not match with previous evaluation results
+messageErrorOR = This Overall Response does not match with previous evaluation results
 
 /*--AE--*/
 aePage.addAeTitle = Create a form Adverse event
