--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -161,8 +161,8 @@ update.userSitePage = Mettre à jour la liste des sites assignés à un utilisateur
 /*---Subject---*/
 subjectPage.addSubject = Créer un sujet
 subjectPage.subjectNum = Numéro du sujet 
-subjectPage.subjectNum.placeholder = Doit être compris entre 1 et 999999999
-subjectPage.subjectNum.errorMessage = Le numéro du sujet doit être compris entre 1 et 999999999
+subjectPage.subjectNum.placeholder = Doit être compris entre 1 et 999999
+subjectPage.subjectNum.errorMessage = Le numéro du sujet doit être compris entre 1 et 999999
 messageErrorSubjectNum = Le numéro du sujet entré existe déjà dans la base de données 
 sitePage.ListOfSubjects.modify = Mettre à jour un sujet
 sitePage.ListOfSubjects = Liste des sujets
@@ -272,18 +272,13 @@ tePage.addTeTitle = Créer un formulaire d'Évaluation tumorale
 tePage.status = L'évaluation tumorale a-t'-elle été réalisée?
 tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
-tePage.visitDate = Date de l'évaluation
-tePage.target.lesion = Lésions Cibles
-tePage.non.target.lesion = Lésions Non Cibles
-tePage.new.lesion.status = Nouvelle Lésion
-tePage.overall.response = Réponse Globale
+tePage.visitDate = Date de l'évaluation 
+tePage.target.lesion = Lésions Cibles 
+tePage.non.target.lesion = Lésions Non Cibles 
+tePage.new.lesion.status = Nouvelle Lésion 
+tePage.overall.response = Réponse Globale 
 application.create.te = Créer le formulaire d'Evaluation tumorale
-messageErrorCR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
-messageErrorPR = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
-messageErrorSD = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
-messageErrorPD = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
-messageErrorNAE = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
-messageErrorNE = La Réponse Globale ne coïncide pas avec les résultats de l'évaluation précédents
+messageErrorOR = La Réponse Globale ne coïncide pas avec les résultats précédents de l'évaluation
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
@@ -361,7 +356,7 @@ cmPage.cmfreqsp.errorMessage = Veuillez spécifier la Fréquence autre ou corriger
 messageErrorCmFuture = La Date de début ne peut pas être dans le futur
 messageErrorCmendat = La Date de fin ne peut pas être dans le futur
 messageErrorCmendatBeforcmstdat = La Date de fin est antérieure à la Date de début, veuillez corriger
-messageErrorCmdoseAndCmdosuUnknown = La Dose entrée n'est pas 0 mais l'unité est rapportée est Unknown, veuillez corriger
+messageErrorCmdoseAndCmdosuUnknown = La Dose entrée n'est pas 0 mais l'unité rapportée est Unknown, veuillez corriger
 messageErrorCmdoseAndCmdosuControl = La Dose entrée est 0 mais l'Unité est différente de Unknown, veuillez corriger
 messageErrorCmstdatMis = Veuillez spécifier la date de début
 messageErrorCmendatMis = Veuillez spécifier la Date de fin ou corriger la réponse précédente
