QueryService + VS (I18N, addVs et VsBean)

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -182,8 +182,8 @@ done = Done
 notDone = Not Done
 dovPage.visitNd = Please specify why the visit is not done
 dovPage.visitNd.placeholder = Please specify why the visit is not done
-messageErrorVisitNd = This field can only be completed if the visit is not
-messageErrorVisitNdFalse = This field must be completed if the visit is done
+messageErrorVisitNd = This field must be completed if the visit is done
+messageErrorVisitNdFalse = This field can only be completed if the visit is not
 messageErrorVisitDateMissing = The date must be entered if the visit is performed
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The date of visit cannot be in the future
@@ -224,11 +224,13 @@ vsPage.height = Height
 vsPage.height.placeholder = Please specify Height value
 vsPage.height.errorMessage = Please specify Height or report this assessment as not done
 vsPage.height.unit = Height unit
+messageErrorHeightUnitNull = Please specify the unit for the height
 vsPage.weightNd = Weight assessment
 vsPage.weight = Weight
 vsPage.weight.placeholder = Please specify Weight value
 vsPage.weight.errorMessage = Please specify Weight or report this assessment as not done
 vsPage.weight.unit = Weight unit
+messageErrorWeightUnitNull = Please specify the unit for the weight
 vsPage.bpNd = Blood pressure assessment 
 vsPage.input_sbp = Systolic blood pressure
 vsPage.input_sbp.placeholder = Please specify Systolic blood pressure value
@@ -249,7 +251,9 @@ vsPage.input_temp = Temperature
 vsPage.input_temp.placeholder = Please specify Temperature value
 vsPage.input_temp.errorMessage = Please specify Temperature or report this assessment as not done
 vsPage.tempU = Unit temperature
+messageErrorTempUnitNull = Please specify the unit for the temperature
 vsPage.tempRoute = Route temperature
+messageErrorTempRoute = Please specify the route for the temperature
 vsPage.oxyNd = Oxygen saturation assessment
 vsPage.input_oxy = Oxygen saturation
 vsPage.input_oxy.placeholder = Please specify Oxygen saturation value
