--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -182,8 +182,8 @@ done = Réalisé(e)
 notDone = Non réalisé(e)
 dovPage.visitNd = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée 
 dovPage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée
-messageErrorVisitNd = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
-messageErrorVisitNdFalse = Ce champ doit être rempli si la visite n'a pas été réalisée
+messageErrorVisitNd = Ce champ doit être rempli si la visite n'a pas été réalisée
+messageErrorVisitNdFalse = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
 messageErrorVisitDateMissing = La date de visite est obligatoire si celle-ci a été réalisée
 dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
@@ -224,11 +224,13 @@ vsPage.height = Taille
 vsPage.height.placeholder = Veuillez spécifier la Taille
 vsPage.height.errorMessage = Veuillez spécifier la Taille ou confirmer cette mesure comme non réalisée
 vsPage.height.unit = Unité de taille
+messageErrorHeightUnitNull = Veuillez spécifier l'unité pour la taille
 vsPage.weightNd = Mesure du poids
 vsPage.weight = Poids
 vsPage.weight.placeholder = Veuillez spécifier le Poids
 vsPage.weight.errorMessage = Veuillez spécifier le Poids ou confirmer cette mesure comme non réalisée
 vsPage.weight.unit = Unité de poids
+messageErrorWeightUnitNull = Veuillez spécifier l'unité pour le poids
 vsPage.bpNd = Mesure de la pression sanguine
 vsPage.input_sbp = Pression sanguine systolique
 vsPage.input_sbp.placeholder = Veuillez spécifier la Pression sanguine systolique
@@ -249,7 +251,9 @@ vsPage.input_temp = Température
 vsPage.input_temp.placeholder = Veuillez spécifier la Température
 vsPage.input_temp.errorMessage = Veuillez spécifier la Température ou confirmer cette mesure comme non réalisée
 vsPage.tempU = Unité de température
+messageErrorTempUnitNull = Veuillez spécifier l'unité pour la température
 vsPage.tempRoute = Voie de mesure de la température
+messageErrorTempRoute = Veuillez spécifier la voie pour la température
 vsPage.oxyNd = Mesure de la saturation en oxygène
 vsPage.input_oxy = Saturation en oxygène
 vsPage.input_oxy.placeholder = Veuillez spécifier la Saturation en oxygène
