--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -387,5 +387,7 @@ event.active = Reactivate Event
 /*---Query---*/
 queryPage.addQueryTitle = Create a Query
 queryPage.text = Query text
+queryPage.answer =
 messageErrorInputQueryTextNd = Query text is mandatory
 application.create.query = Create the Query
+messageErrorInputQueryAnswerNd =
