--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -387,5 +387,7 @@ event.active = Réactiver l'évènement
 /*---Query---*/
 queryPage.addQueryTitle = Créer une Requête
 queryPage.text = Texte de la Requête
+queryPage.answer =
 messageErrorInputQueryTextNd = L'énoncé de la Requête est obligatoire
 application.create.query = Créer la Requête
+messageErrorInputQueryAnswerNd =
