QueryService + VS (I18N, addVs et VsBean)

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -270,6 +270,7 @@ messageErrorRr = Temperature is not in the expected range, please correct
 messageErrorTempC = Temperature is not in the expected range with the selected unit
 messageErrorTempF = Temperature is not in the expected range with the selected unit
 messageErrorOxy = Oxygen Saturation Temperature is not in the expected range
+messageErrorPerf = Vital signs are reported as collected  but all assessments are reported as not done
 
 /*---TE---*/
 tePage.addTeTitle = Create a form Tumoral evaluation
