--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -270,6 +270,7 @@ messageErrorRr = La Fréquence respiratoire n'est pas dans la gamme de valeurs at
 messageErrorTempC = La Température n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
 messageErrorTempF = La Température n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
 messageErrorOxy = La Saturation en oxygène n'est pas dans la gamme de valeurs attendues
+messageErrorPerf = Les signes vitaux sont rapportés comme réalisés mais toutes les mesures sont rapportées comme non réalisées
 
 /*---TE---*/
 tePage.addTeTitle = Créer un formulaire d'Évaluation tumorale
