--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -76,6 +76,8 @@ add = has been created
 update = has been updated
 inactive = has been inactivated
 reactive = has been reactivated
+closed = has been closed
+open = has been reopened
 for = for
 
 /*---Site---*/
