--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -76,6 +76,8 @@ add = a bien été créé
 update = a bien été mis à jour
 inactive = a bien été désactivé
 reactive = a bien été réactivé
+closed = a bien été cloturé
+open = a bien été réouverte
 for = pour
 
 /*---Site---*/
