--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -392,3 +392,10 @@ queryPage.answer =
 messageErrorInputQueryTextNd = Query text is mandatory
 application.create.query = Create the Query
 messageErrorInputQueryAnswerNd =
+
+/*---Mail---*/
+newSAE =A new SAE has been submitted for the subject
+dear =Dear Study team, \n\nThe following Serious Adverse Event has been submitted in your study.
+dear2 =Dear Study team, \n\nThe following Serious Adverse Event has been updated in your study.
+team =Kind Regards,\n\nThe SYM-022 Study team
+reminder= Kind Reminder: Any SAE must be reported within 24 hours of investigator learning about the event 
