--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -392,3 +392,11 @@ queryPage.answer =
 messageErrorInputQueryTextNd = L'énoncé de la Requête est obligatoire
 application.create.query = Créer la Requête
 messageErrorInputQueryAnswerNd =
+
+/*---Mail---*/
+newSAE = Un nouveau SAE a été rapporté pour le sujet
+updateSAE = Un SAE a été rmis à jour pour le sujet
+dear = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été soumis pour votre étude.
+dear2 = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été mis à jour pour votre étude.
+team =Cordialement,\n\nL'Équipe SYM-022
+reminder= Rappel: Tout évènement indésirable sérieux doit être rapporté endéans les 24 heures après la prise de connaissance par l'investigateur 
