--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -48,6 +48,16 @@ menu.data.event.consult = List of events
 menu.CRA = CRA
 menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = List dof events to monitor
+menu.MEDICAL =
+menu.data.MEDICAL =
+menu.data.MEDICAL.to.CodeAe =
+menu.data.MEDICAL.to.CodeCm =
+menu.query =
+menu.data.query =
+menu.data.query.to.consult =
+menu.data.query.to.answer =
+menu.data.query.answered =
+menu.auditTrail=
 
 /*---Filter---*/
 listPage.messageErrorResearch = Research needs to be less than 60 characters and without special character
@@ -176,6 +186,9 @@ visitPage.visit = Visit
 visitPage.visitLabel = Visit name 
 formPage.form = Form 
 formPage.formLabel = Form name 
+eventsPage.ListOfEventsToCodeAe =
+eventsPage.ListOfEventsToCodeCm =
+eventsPage.ListOfEventsToMonitored =
 
 /*---DOV---*/
 dovPage.addDovTitle = Create a form Date of visit
@@ -394,6 +407,33 @@ queryPage.answer =
 messageErrorInputQueryTextNd = Query text is mandatory
 application.create.query = Create the Query
 messageErrorInputQueryAnswerNd =
+application.update.query =
+application.close.query =
+queryPage.updateQueryTitle =
+query.dateTime =
+query.statut =
+query.dov.consult =
+query.ic.consult =
+query.dm.consult =
+query.vs.consult =
+query.te.consult =
+query.ae.consult =
+query.cm.consult =
+application.ae.query =
+application.cm.query =
+application.dm.query =
+application.dov.query =
+application.ic.query =
+application.te.query =
+application.vs.query =
+
+/*---AuditTrail---*/
+auditTrailPage.ListOfAuditTrail =
+auditTrailPage.dateTime =
+
+/*---CRA---*/
+application.monitor =
+application.non.monitor =
 
 /*---Mail---*/
 newSAE =A new SAE has been submitted for the subject
