--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -48,6 +48,16 @@ menu.data.event.consult = Liste des évènements
 menu.CRA = ARC
 menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = Liste des évènements à monitorer
+menu.MEDICAL =
+menu.data.MEDICAL =
+menu.data.MEDICAL.to.CodeAe =
+menu.data.MEDICAL.to.CodeCm =
+menu.query =
+menu.data.query =
+menu.data.query.to.consult =
+menu.data.query.to.answer =
+menu.data.query.answered =
+menu.auditTrail=
 
 /*---Filter---*/
 listPage.messageErrorResearch = La recherche doit faire moins de 60 caractères et ne pas contenir de caractères spéciaux
@@ -176,6 +186,9 @@ visitPage.visit = Visite
 visitPage.visitLabel = Nom de la visite
 formPage.form = Formulaire 
 formPage.formLabel = Nom du formulaire
+eventsPage.ListOfEventsToCodeAe =
+eventsPage.ListOfEventsToCodeCm =
+eventsPage.ListOfEventsToMonitored =
 
 /*---DOV---*/
 dovPage.addDovTitle = Créer un formulaire Date de visite
@@ -394,6 +407,33 @@ queryPage.answer =
 messageErrorInputQueryTextNd = L'énoncé de la Requête est obligatoire
 application.create.query = Créer la Requête
 messageErrorInputQueryAnswerNd =
+application.update.query =
+application.close.query =
+queryPage.updateQueryTitle =
+query.dateTime =
+query.statut =
+query.dov.consult =
+query.ic.consult =
+query.dm.consult =
+query.vs.consult =
+query.te.consult =
+query.ae.consult =
+query.cm.consult =
+application.ae.query =
+application.cm.query =
+application.dm.query =
+application.dov.query =
+application.ic.query =
+application.te.query =
+application.vs.query =
+
+/*---AuditTrail---*/
+auditTrailPage.ListOfAuditTrail =
+auditTrailPage.dateTime =
+
+/*---CRA---*/
+application.monitor =
+application.non.monitor =
 
 /*---Mail---*/
 newSAE = Un nouveau SAE a été rapporté pour le sujet
